<?xml version="1.0" encoding="utf-8"?>
<quarky.com.br.mercuryjacket.ui.layout.JacketLoaderLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:src="@drawable/loaded_bar"
            android:tint="@color/darkgrey"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loader"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="275dp" />

        <ImageView
            android:id="@+id/jacket"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:src="@drawable/jacket" />

    </RelativeLayout>

    <quarky.com.br.mercuryjacket.ui.view.CustomTextView
        android:id="@+id/loader_status_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/searching_title"
        android:textAlignment="center"
        android:textColor="@color/greyThree"
        android:textSize="@dimen/titleSize"
        app:fontFamily="@string/regular_font"/>

    <quarky.com.br.mercuryjacket.ui.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bluetooth_alert_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontFamily="@string/regular_font"/>

</quarky.com.br.mercuryjacket.ui.layout.JacketLoaderLayout>